<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.dhbw.programming.exam</groupId>
    <artifactId>exam_programming_1</artifactId>
    <version>1.0.2-RELEASE</version>
    <name>Java Klausur</name>
    <description>Java Klausur Programmierung 1</description>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <junit.version>5.9.1</junit.version>
        <hamcrest.version>2.2</hamcrest.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>

        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
        <jackson.version>2.14.2</jackson.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-parameter-names</artifactId>
            <version>${jackson.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.6</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>make-exam</id>
            <build>
                <plugins>

                    <!-- Javadoc Plugin -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <configuration>
                            <sourcepath>
                                ${project.basedir}/src/main/java/de/dhbw/assignments/exam/impl
                            </sourcepath>
                            <excludePackageNames>
                                de.dhbw.assignments.exam.solution.*
                            </excludePackageNames>
                            <docencoding>UTF-8</docencoding>
                            <encoding>UTF-8</encoding>
                            <charset>UTF-8</charset>

                            <noindex>true</noindex>
                            <notree>true</notree>
                            <nonavbar>false</nonavbar>
                            <nohelp>true</nohelp>
                            <nodeprecated>true</nodeprecated>
                            <nosince>true</nosince>
                            <noqualifier>java.lang</noqualifier>
                            <quiet>true</quiet>
                            <detectOfflineLinks>false</detectOfflineLinks>
                            <detectJavaApiLink>false</detectJavaApiLink>
                            <offline>true</offline>
                            <additionalparam>-noindex</additionalparam>
                            <additionalOptions>
                                <additionalOption>--no-frames</additionalOption>
                            </additionalOptions>
                        </configuration>
                        <executions>
                            <execution>
                                <id>generate-javadoc</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>javadoc</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.4.2</version>
                        <configuration>
                            <finalName>programming_1</finalName>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-exam</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <descriptors>
                                        <descriptor>src/assembly/exam.xml</descriptor>
                                    </descriptors>
                                    <appendAssemblyId>true</appendAssemblyId>
                                </configuration>
                            </execution>
                            <execution>
                                <id>make-blueprint</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <descriptors>
                                        <descriptor>src/assembly/blueprint.xml</descriptor>
                                    </descriptors>
                                    <appendAssemblyId>true</appendAssemblyId>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>make-submission</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.4.2</version>
                        <configuration>
                            <finalName>programming_1-submission-${timestamp}</finalName>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-submission</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <descriptors>
                                        <descriptor>src/assembly/submission.xml</descriptor>
                                    </descriptors>
                                    <appendAssemblyId>false</appendAssemblyId>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>test-submission</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <failOnError>false</failOnError>
                            <verbose>false</verbose>
                        </configuration>
                        <!--
                        <executions>

                            <execution>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <id>ExamTask-1</id>
                                <configuration>
                                    <failOnError>false</failOnError>
                                    <includes>
                                        de/dhbw/assignments/exam/impl/ExamTask1.java</includes>
                                </configuration>
                            </execution>
                            <execution>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <id>ExamTask-2</id>
                                <configuration>

                                    <failOnError>false</failOnError>
                                    <includes>
                                        de/dhbw/assignments/exam/impl/ExamTask2.java</includes>
                                </configuration>
                            </execution>
                            <execution>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <id>ExamTask-3</id>
                                <configuration>
                                    <failOnError>false</failOnError>
                                    <includes>
                                        de/dhbw/assignments/exam/impl/ExamTask3.java</includes>
                                </configuration>
                            </execution>
                            <execution>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <id>ExamTask-4</id>
                                <configuration>
                                    <failOnError>false</failOnError>
                                    <includes>
                                        de/dhbw/assignments/exam/impl/ExamTask4.java</includes>
                                </configuration>
                            </execution>
                            <execution>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <id>ExamTask-5</id>
                                <configuration>
                                    <failOnError>false</failOnError>
                                    <includes>
                                        de/dhbw/assignments/exam/impl/ExamTask5.java</includes>
                                </configuration>
                            </execution>
                            <execution>
                                <goals>
                                    <goal>compile</goal>
                                </goals>
                                <id>ExamTask-6</id>
                                <configuration>
                                    <failOnError>false</failOnError>
                                    <includes>
                                        de/dhbw/assignments/exam/impl/ExamTask6.java</includes>
                                </configuration>
                            </execution>
                        </executions>-->
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <argLine>
                                --illegal-access=permit
                            </argLine>
                            <forkCount>1</forkCount>
                            <reuseForks>true</reuseForks>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>toolchain</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-toolchains-plugin</artifactId>
                        <version>3.1.0</version>
                        <configuration>
                            <toolchains>
                                <jdk>
                                    <version>${java.version}</version>
                                </jdk>
                            </toolchains>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>toolchain</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>